# game-of-life

./: README.md  copy_idls.sh  game-of-life.code-workspace  settings.json
app/: .env.template  .gitignore  bun.lockb  next-env-addons.d.ts  package.json
app/src/: index.css
app/src/actions/: BoardActions.tsx
app/src/app/: globals.css
app/src/components/: Board.tsx  Footer.tsx  Header.tsx  Main.tsx  Menu.tsx
app/src/idls/: game_of_life.json
app/src/lib/: auth.ts
app/src/providers/: ProgramContext.ts  ProgramContextProvider.tsx  Providers.tsx  ToastProvider.tsx
game-of-life/: .gitignore  bun.lockb  next-env-addons.d.ts  package.json  tailwind.config.ts  use-react-image.d.ts
game-of-life/src/actions/: BoardActions.tsx  GridActions.tsx
game-of-life/src/app/: layout.tsx  page.tsx  template.tsx
game-of-life/src/components/: Board.tsx  Header.tsx  Main.tsx  Menu.tsx
game-of-life/src/hooks/: useMinter.tsx  useUmi.tsx
game-of-life/src/idls/: game_of_life.json  game_of_life.ts
game-of-life/src/lib/: auth-options.ts  auth.ts  authOptions.ts
game-of-life/src/providers/: ProgramContext.ts  ProgramContextProvider.tsx  Providers.tsx  UmiContext.ts  UmiContextProvider.tsx  WalletContextProvider.tsx
game-of-life/src/store/: GameOfLifeStore.ts
game-of-life/src/supabase/: server.ts
program/: Anchor.toml  package.json
program/programs/game-of-life/: Cargo.toml
program/programs/game-of-life/src/: lib.rs  lib2.rs  test code.rs
program/programs/game-of-life/src/shared/: constants.rs
program/tests/: claude.ts  game-of-life.ts
(+6 files in other folders)
