[package]
name = "game-of-life"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "game_of_life"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0" }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
mpl-bubblegum = { version = "1.4.0" }
mpl-token-metadata = { version = "4.1.2" }
spl-account-compression = { version = "0.4.0", features = ["cpi"] }
